added better url api return type and updated docs
Took 4 hours 38 minutes
